add api for add-blog

--- a/add-blog.html
+++ b/add-blog.html
@@ -110,7 +110,7 @@
                       გამოქვეყნების თარიღი *
                     </label>
                     <input
-                      type="text"
+                      type="date"
                       placeholder="12/12/2023"
                       class="date_input mb-8"
                     />
@@ -123,15 +123,7 @@
                           შეიყვანეთ სათაური
                         </button>
                       </div>
-                      <div id="dropdown-content" class="dropdown-content">
-                        <label class="drop_label"
-                          ><input type="checkbox" value="Item1" />
-                          მარკეტი
-                        </label>
-                        <label class="drop_label"
-                          ><input type="checkbox" value="Item2" /> აპლიკაცია
-                        </label>
-                      </div>
+                      <div id="dropdown-content" class="dropdown-content"></div>
                     </div>
                   </div>
                 </div>
@@ -140,7 +132,7 @@
                   <input
                     type="text"
                     placeholder="Example@redberry.ge"
-                    class="emai_input mb-8"
+                    class="email_input mb-8"
                   />
                   <p class="d-flex important_msg">
                     <i class="fa-solid fa-circle-exclamation"></i> მეილი უნდა
@@ -149,6 +141,7 @@
                 </div>
                 <div class="d-flex justify-content-end">
                   <button class="send_btn">გამოქვეყნება</button>
+                  <button class="end_btn">გამოქვეყნება</button>
                 </div>
               </form>
             </div>
